<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassMarks</string>
	<string name="Media">Mean: </string>
    <string name="Total">Total: </string>
    <string name="recuadroo">  Required mark to pass: </string>
    <string name="addasig">Add Subject  </string>
    <string name="Aprobado">Passed </string>
    <string name="Suspendido">Failed </string>
     <string name="addmark">+ Add new mark  </string>
    <string name="emptyfolder"> Doesn\'t exist any subject\n\n Click on the icon on the right\n top corner of the screen\n to add a new subject</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="introducirnombre">Add name</string>
    <string name="modificar">Edit</string>
    <string name="nombre">Name</string>
    <string name="Nota_aprobar">Score needed to overcome</string>
    <string name="porcentaje">Percentage</string>
    <string name="nota">Mark</string>
    <string name="nuevaasig">New subject</string>
    <string name="asignatura">Subject</string>
    <string name="delete">Delete</string>
    <string name="textoEliminar">Are you sure to\ndelete the subject?</string>
    <string name="toastSinrellenar">Field blank!</string>
    <string name="toastYaexiste"> Already exists</string>
    <string name="toastMaxAsignaturas">You\'ve entered the maximum of subjects, 10!</string>
    <string name="toastNotaExiste"> Already exists</string>
    <string name="toastDatosincorrectos">Data are incorrect!</string>
    <string name="toastCampossinrellenar">Some fields are empty!</string>
    <string name="toastMaxPorcentaje">You already have 100%!</string>
    
</resources>
